--- a/lib/packages/defaults.yaml
+++ b/lib/packages/defaults.yaml
@@ -1,20 +1,23 @@
 
 :svn_server_address: <%= ENV['SVN_SERVER'] %>
-:default_package_installer: installer.rb
+:git_server_address: <%= ENV['GIT_SERVER'] %>
+:default_package_installer: installer
 :default_package_location: package/
 :project_package_file: project.packages
-# :package_dump:  <%= ENV['PackagesArtifactsRoot'] %>/packages
 :package_dump:  <%= ENV['PackagesArtifactsRoot'] %>/packages
 :version_file_name: version.txt
+:default_repo_type: :git
 
 :known_packages:
     :halwayi:
-        :repo: <%= ENV['SVN_SERVER'] %>halwayiMerged/
+        :repo: <%= ENV['GIT_SERVER'] %>/halwayi/
         # :located_at: package/
+        # :repo_type: :git
         # :installer: unpack.bat
     :boski:
-        :repo: <%= ENV['SVN_SERVER'] %>boski/
+        :repo: <%= ENV['GIT_SERVER'] %>/boski/
         # :located_at: package/
+        # :repo_type: :git
         # :installer: unpack.bat
 
 
