- implemented load: starts a new shell session for the passed embedded project and prepares the environment.
- added minlab in the list of known packages in packages/defaults.yaml

--- a/lib/packages/defaults.yaml
+++ b/lib/packages/defaults.yaml
@@ -19,38 +19,12 @@
         # :located_at: package/
         # :repo_type: :git
         :installer: unpack.bat
+    :minlab:
+        :repo: <%= ENV['GIT_SERVER'] %>/minlab/
+        :located_at: lib/
+        :installer: unpack.bat
 
 
 :default_look_up_paths:
     - <%= ENV['ProjectRoot'] %>
     - <%= ENV['CD'] %>/
-    - <%= ENV['CD'] %>/../
-    - <%= ENV['CD'] %>/../../
-    - <%= ENV['CD'] %>/../../../
-    - <%= ENV['CD'] %>/../../../../
-    - <%= ENV['CD'] %>/../../../../../
-    - <%= ENV['CD'] %>/../../../../../../
-    - <%= ENV['CD'] %>/../../../../../../../
-    - <%= ENV['CD'] %>/../../../../../../../../
-    - <%= ENV['CD'] %>/../../../../../../../../../
-    - <%= ENV['CD'] %>/../../../../../../../../../../
-    - <%= ENV['CD'] %>/../../../../../../../../../../../
-    - <%= ENV['CD'] %>/../../../../../../../../../../../../
-    - <%= ENV['CD'] %>/../../../../../../../../../../../../../
-    - <%= ENV['CD'] %>/../../../../../../../../../../../../../../
-    - <%= ENV['CD'] %>/../../../../../../../../../../../../../../../
-    - <%= ENV['CD'] %>/../../../../../../../../../../../../../../../../
-    - <%= ENV['CD'] %>/../../../../../../../../../../../../../../../../../
-    - <%= ENV['CD'] %>/../../../../../../../../../../../../../../../../../../
-    - <%= ENV['CD'] %>/../../../../../../../../../../../../../../../../../../../
-    - <%= ENV['CD'] %>/../../../../../../../../../../../../../../../../../../../../
-    - <%= ENV['CD'] %>/../../../../../../../../../../../../../../../../../../../../../
-    - <%= ENV['CD'] %>/../../../../../../../../../../../../../../../../../../../../../../
-    - <%= ENV['CD'] %>/../../../../../../../../../../../../../../../../../../../../../../../
-    - <%= ENV['CD'] %>/../../../../../../../../../../../../../../../../../../../../../../../../
-    - <%= ENV['CD'] %>/../../../../../../../../../../../../../../../../../../../../../../../../../
-    - <%= ENV['CD'] %>/../../../../../../../../../../../../../../../../../../../../../../../../../../
-    - <%= ENV['CD'] %>/../../../../../../../../../../../../../../../../../../../../../../../../../../../
-    - <%= ENV['CD'] %>/../../../../../../../../../../../../../../../../../../../../../../../../../../../../
-    - <%= ENV['CD'] %>/../../../../../../../../../../../../../../../../../../../../../../../../../../../../../
-    - <%= ENV['CD'] %>/../../../../../../../../../../../../../../../../../../../../../../../../../../../../../../
