- load: now also looks for 'env.txt' in case 'paths.txt' is not found
- lib/packages/defaults.yaml: added support for 'tinker' in known packages.

--- a/lib/packages/defaults.yaml
+++ b/lib/packages/defaults.yaml
@@ -22,6 +22,12 @@
     :minlab:
         :repo: <%= ENV['GIT_SERVER'] %>/minlab/
         :located_at: lib/
+        # :repo_type: :git
+        :installer: unpack.bat
+    :tinker:
+        :repo: <%= ENV['GIT_SERVER'] %>/tinker/
+        # :located_at: package/
+        # :repo_type: :git
         :installer: unpack.bat
 
 
